--- a/index.html
+++ b/index.html
@@ -800,22 +800,22 @@
             {
                 question: "What word was so difficult for me to pronounce our first Christmas together in Poland?",
                 answers: [
-                    { text: "A) Kurwa", correct: false, wrongMessage: "Really?! That's literally the FIRST word everyone learns! 😂 No gift for you!" },
-                    { text: "B) Piwo", correct: false, wrongMessage: "Piwo?! I can say that perfectly! It means BEER! 🍺 Try again, no gift!" },
+                    { text: "A) Kurwa", correct: false, wrongMessage: "I'm pretty that was the opposite of difficult for anyone that's not Polish" },
+                    { text: "B) Piwo", correct: false, wrongMessage: "Don't piss me off now..." },
                     { text: "C) Wszystkich", correct: true },
-                    { text: "D) Dziewięćsetdziewięćdziesięciodziewięcionarodowościowego", correct: false, wrongMessage: "Nice try, but NOBODY can pronounce that! 😅 No gift for you!" }
+                    { text: "D) Dziewięćsetdziewięćdziesięciodziewięcionarodowościowego", correct: false, wrongMessage: "I mean, sure, if I Had to even try it I would probably go disabled" }
                 ],
-                wrongMessage: "SERIOUSLY?! I practiced that word for HOURS and you forgot?! No gift! 😭"
+                wrongMessage: "No gift for you!"
             },
             {
                 question: "Where did we eat on our first dinner date in Łódź?",
                 answers: [
-                    { text: "A) Farina Bianco", correct: false, wrongMessage: "Nope! That's not where we had our first date! 😅 Try again!" },
+                    { text: "A) Farina Bianco", correct: false, wrongMessage: "I know your memory is bad, but that bad?!" },
                     { text: "B) Tabu", correct: true, dodgy: true },
-                    { text: "C) McDonalds", correct: false, wrongMessage: "MCDONALD'S?! Really?! I have better taste than that! 😂" },
-                    { text: "D) Yalla yalla Kebab", correct: false, wrongMessage: "Close, but no kebab! 🥙 Try again!" }
+                    { text: "C) McDonalds", correct: false, wrongMessage: "That woodcutters burger though..." },
+                    { text: "D) Yalla yalla Kebab", correct: false, wrongMessage: "Frankly, we only go there when we're drunk xd" }
                 ],
-                wrongMessage: "Wrong! Try to remember our special first date! 💕"
+                wrongMessage: "Ha ha you so funny"
             },
             {
                 question: "What probably makes you the happiest when you're sad?",
